# cookiecutter-python-package

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.sh
{{cookiecutter.project_name}}/: LICENSE  README.md  pyproject.toml
{{cookiecutter.project_name}}/docs/: build.sh  conf.py  index.md  index.rst
{{cookiecutter.project_name}}/docs/_templates/: page1.md  page2.md  page4.md  page5.md
{{cookiecutter.project_name}}/docs/src/: getting-started.md  install.md  page3.md
{{cookiecutter.project_name}}/docs/src/api_reference/: client.md
{{cookiecutter.project_name}}/tests/: test_client.py  test_entrypoint1.py  test_entrypoint2.py  test_{{cookiecutter.project_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py  client.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/module1/: entrypoint1.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/module2/: entrypoint2.py
