[tool.poetry]
authors     = ["Thomas van Meer <tvanmeer123@gmail.com>"]
description = "A crypto trading bot."
homepage    = "https://github.com/tvanmeer/scalpr2"
license     = "MIT"
name        = "scalpr2"
readme      = "README.md"
repository  = "https://github.com/tvanmeer/scalpr2.git"
version     = "0.1.0"

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.dev-dependencies]
Sphinx      = "^4.3.1"
black       = { version = "*", allow-prereleases = true }
furo        = "^2021.11.23"
isort       = "^5.10.1"
myst-parser = "^0.16.0"
pylint      = "2.12.1"
pytest      = "6.2.5"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
  )/
)
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable         = "C0330, C0326"
max-line-length = 88

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core>=1.0.0"]
