[tool.poetry]
authors     = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
description = "{{cookiecutter.project_description}}"
homepage    = "https://github.com/{{cookiecutter.author_github_name}}/{{cookiecutter.project_name}}"
license     = "MIT"
name        = "{{cookiecutter.project_name}}"
readme      = "README.md"
repository  = "https://github.com/{{cookiecutter.author_github_name}}/{{cookiecutter.project_name}}.git"
version     = "{{cookiecutter.version}}"

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.dev-dependencies]
black                    = { version = "*", allow-prereleases = true }
furo                     = "^2021.11.23"
isort                    = "^5.10.1"
myst-parser              = "^0.16.1"
pylint                   = "2.12.1"
pytest                   = "6.2.5"
sphinx                   = "^4.3.1"
sphinx-autobuild         = "*"
sphinx-autodoc-typehints = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
  )/
)
'''
include = '\.pyi?$'
line-length = {{cookiecutter.editor_line_length}}
target-version  = ['py310']

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable         = "C0330, C0326"
max-line-length = {{cookiecutter.editor_line_length}}

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core>=1.0.0"]
